11/25/13 - Commit 1
    Refactored system/router.php->get_router()

11/18/2013 - Commit 1
    Fixed general issues with Databasing and Templates

11/30/2012 - Commit 1
    Changed permissions
    Fixed issue where if you went to www.example.com the framework would break

11/18/2012 - Commit 3
    Changed /applications to /application
    Removed TODO from README
    Added TODO file
    Refactored CHANGELOG

11/18/2012 - Commit 2
    Fixed some issues with the /plugins directory & not commiting plugins
    Fixed issue when seeing if an uninitialized view exists. /system/router.php:171

11/18/2012 - Commit 1
    Updated all file comment headers to incorporate the correct url. (khdev.net)